--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -58,6 +58,8 @@
   <!-- Javascript files -->
   <!-- build:js:dist js/app.js -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="./js/gest.min.js"></script>
+      <script src="./js/main.js"></script>
   <script>
   window.jQuery || document.write('<script src="./js/vendor/jquery.min.js"><\/script>');
   </script>
