--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -45,7 +45,8 @@
 
   <!-- Content -->
   <main role="main">
-
+    <!--build:include 1.html-->
+    <!--/build-->
   </main>
 
   <!-- /End of Content -->
