--- a/assets/styles/templates/_home.scss
+++ b/assets/styles/templates/_home.scss
@@ -6,8 +6,12 @@
 
 @mixin randomize($number) {
   @for $i from 1 through $number {
-    &:nth-child(#{$i}) {  transform: rotate(random(300) + deg) scale(random(5)) translate((random(100)*3) + %,( random(100)*3) + %); opacity: random(10) * 0.1; }
+    &:nth-child(#{$i}) {  transform: rotate(random(300) + deg) scale(random(5)) translate((random(100)*3) + %,( random(100)*3) + %); opacity: random(1) * 0.1; }
   }
+}
+
+body, html {
+  overflow: hidden;
 }
 
 main {
@@ -18,8 +22,8 @@ main {
 
 svg > * {
   transform-origin: center;
-  transition: all 1s;
-  @include randomize(3000);
+  transition: all 1s cubic-bezier(.55,.12,.48,.99);
+  @include randomize(300);
 }
 
 .active > * {
