[WIP] added slick js

--- a/assets/styles/core/_settings.scss
+++ b/assets/styles/core/_settings.scss
@@ -25,7 +25,7 @@ $msuif-font-weight-bold:          700;
 ///
 $msuif-font-color:                #101010;
 ///
-$msuif-font-color-bright:         #edede6;
+$msuif-font-color-bright:         #000;
 ///
 $msuif-font-color-dark:           $msuif-font-color;
 ///
