--- a/assets/styles/templates/_home.scss
+++ b/assets/styles/templates/_home.scss
@@ -6,27 +6,20 @@
 
 @mixin randomize($number) {
   @for $i from 1 through $number {
-    &:nth-child(#{$i}) {  transform: rotate(random(300) + deg) scale(random(5)) translate((random(100)*3) + %,( random(100)*3) + %); opacity: random(1) * 0.1; }
+    &:nth-child(#{$i}) {
+      transform: rotate(random(300) + deg) scale(random(5)) translate((random(100)*3) + %, ( random(100)*3) + %);
+      opacity: random(1) * 0.1;
+    }
   }
 }
 
-body, html {
-  overflow: hidden;
-}
-
-main {
-  display: flex;
-  align-items: center;
-  height: 100vh;
-}
-
-svg > * {
+svg>* {
   transform-origin: center;
-  transition: all 1s cubic-bezier(.55,.12,.48,.99);
+  transition: all 1s cubic-bezier(.55, .12, .48, .99);
   @include randomize(300);
 }
 
-.active > * {
+.active>* {
   transform: initial !important;
   opacity: 1 !important;
 }
