[WIP] added transitions between slides.

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -51,6 +51,8 @@
     <!--/build-->
     <!--build:include 1.html-->
     <!--/build-->
+    <!--build:include 2.html-->
+    <!--/build-->
     </div>
   </main>
 
