--- a/assets/styles/templates/_home.scss
+++ b/assets/styles/templates/_home.scss
@@ -13,13 +13,23 @@
   }
 }
 
-svg>* {
+svg > * {
   transform-origin: center;
   transition: all 1s cubic-bezier(.55, .12, .48, .99);
   @include randomize(300);
 }
 
-.active>* {
+.slide {
+  height: 100vh;
+}
+
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.active > * {
   transform: initial !important;
   opacity: 1 !important;
 }
